fix(header): add header z-index to render on top

--- a/front-end/src/components/Header/Header.module.css
+++ b/front-end/src/components/Header/Header.module.css
@@ -9,6 +9,7 @@
 }
 
 .header {
+  z-index: 10;
   position: sticky;
   padding: 0.5em;
   top: 0;
